--- a/applications/dashboard/scss/new-features/selectBox.scss
+++ b/applications/dashboard/scss/new-features/selectBox.scss
@@ -132,7 +132,7 @@ body.Categories.isMobile .PageControls.Top {
     display: block;
 }
 
-.discussion-sort-filter-module {
+.ButtonGroup.discussion-sort-filter-module {
     display: flex;
     align-items: center;
 }
