Fixed inconsistency with include

--- a/applications/dashboard/scss/style-compat.scss
+++ b/applications/dashboard/scss/style-compat.scss
@@ -1,5 +1,5 @@
 // Compatibility
-@import "compatibility/_mixins.scss";
+@import "compatibility/mixins";
 @import "compatibility/utilities";
 @import "compatibility/image-cropper";
 
