Create functional image uploads

--- a/applications/dashboard/design/style-compat.css
+++ b/applications/dashboard/design/style-compat.css
@@ -193,6 +193,10 @@ body.isMobile .change-picture .change-picture-instructions {
   opacity: 1;
 }
 
+.richEditor-upload {
+  display: none;
+}
+
 .embedBar {
   display: block;
   width: 100%;
