--- a/applications/dashboard/scss/new-features/_richEditor.scss
+++ b/applications/dashboard/scss/new-features/_richEditor.scss
@@ -199,6 +199,10 @@ $embedded-quote_fg: #A3A3A3 !default;
     }
 }
 
+.richEditor-upload {
+    display: none;
+}
+
 .embedBar {
     display: block;
     width: 100%;
