Tweak to default mobile theme for new Group UI

--- a/themes/mobile/design/custom.css
+++ b/themes/mobile/design/custom.css
@@ -509,3 +509,9 @@ td.BigCount {
 .CountItemWrap {
     width: auto; /* Keep counts from being mushed together */
 }
+
+/* Groups */
+
+.groupsSearch {
+    width: 100%;
+}
