Changed default config for Maximum profile picture height & width Added media query to hide image cropper when sides of popup hit the sides of the window for the default Vanilla styles

--- a/applications/dashboard/design/style-compat.css
+++ b/applications/dashboard/design/style-compat.css
@@ -18,6 +18,15 @@ body.isMobile .change-picture .change-picture-instructions {
   display: none;
 }
 
+@media (max-width: 600px) {
+  .box-crop .box-source {
+    display: none;
+  }
+  .change-picture .change-picture-instructions {
+    display: none;
+  }
+}
+
 .followButton {
   white-space: nowrap;
   font-size: 10px;
