--- a/applications/dashboard/scss/style-compat.scss
+++ b/applications/dashboard/scss/style-compat.scss
@@ -5,6 +5,7 @@
 @import "compatibility/scaffolding";
 @import "compatibility/utilities";
 @import "compatibility/image-cropper";
+@import "compatibility/buttons";
 
 // New Features
 @import "new-features/mixins";
