--- a/applications/dashboard/design/style-compat.css
+++ b/applications/dashboard/design/style-compat.css
@@ -42,6 +42,38 @@ button.Close {
   padding: 0;
 }
 
+.accessibility-jumpTo {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  border: 0;
+  border: 0;
+  clip: rect(0 0 0 0);
+  height: 1px;
+  margin: -1px;
+  overflow: hidden;
+  padding: 0;
+  position: absolute;
+  width: 1px;
+}
+
+.accessibility-jumpTo:focus {
+  position: absolute;
+  top: 50px;
+  left: 0;
+  text-align: left;
+  background-color: white;
+  color: black;
+  display: block;
+  font-size: 22px;
+  clip: auto;
+  margin: 0;
+  height: auto;
+  padding: 0 12px;
+  width: 100%;
+  z-index: 2;
+}
+
 @keyframes spinnerLoader {
   0% {
     transform: rotate(73deg);
