Added CSS rule to hide generic heading for tables, if we have a category heading

--- a/applications/dashboard/design/style-compat.css
+++ b/applications/dashboard/design/style-compat.css
@@ -27,6 +27,10 @@ body.isMobile .change-picture .change-picture-instructions {
   }
 }
 
+.categoryList-heading + .DataTableWrap > .categoryList-genericHeading {
+  display: none;
+}
+
 .followButton {
   white-space: nowrap;
   font-size: 10px;
