--- a/applications/dashboard/scss/style-compat.scss
+++ b/applications/dashboard/scss/style-compat.scss
@@ -2,6 +2,7 @@
 @import "compatibility/mixins";
 @import "compatibility/utilities";
 @import "compatibility/image-cropper";
+@import "compatibility/categories";
 
 // This should always be added after style.css and not be overridden.
 
