--- a/applications/dashboard/design/style-compat.css
+++ b/applications/dashboard/design/style-compat.css
@@ -184,18 +184,18 @@ button.Close {
 
 .richEditor-menuItem {
   display: block;
-  margin: 0;
   padding: 0;
+  margin: 0;
 }
 
-.richEditor-menuItem .richEditor-button {
+.richEditor-menuItem .richEditor-button, .richEditor-menuItem.richEditor-button {
   height: 39px;
   width: 39px;
   font-size: 24px;
   line-height: 39px;
 }
 
-.richEditor-menuItem .richEditor-button.emojiChar-🇺🇳 {
+.richEditor-menuItem .richEditor-button.emojiChar-🇺🇳, .richEditor-menuItem.richEditor-button.emojiChar-🇺🇳 {
   font-size: 14px;
 }
 
