Make generic popover component for both emoji picker and insert media picker

--- a/applications/dashboard/design/style-compat.css
+++ b/applications/dashboard/design/style-compat.css
@@ -419,10 +419,18 @@ button.Close {
   height: 100%;
 }
 
-.richEditor-menu.insertEmoji {
+.embedDialogue {
+  position: relative;
+}
+
+.richEditor-menu.insertPopover {
   position: absolute;
   bottom: 100%;
   left: 0;
+}
+
+.insertMedia-title {
+  font-size: 100%;
 }
 
 .richEditor-insertEmoji {
