Renamed "insertMedia-title" to a more generic name Pass title and description IDs from popover controller down to popover Removed console.log Set focus on title of emoji popover when opening it.

--- a/applications/dashboard/design/style-compat.css
+++ b/applications/dashboard/design/style-compat.css
@@ -380,7 +380,7 @@ button.Close {
   padding-right: 12px;
 }
 
-.insertMedia-title {
+.popover-title {
   margin: 0;
   max-width: calc(100% - 39px);
   min-height: 27px;
@@ -429,7 +429,7 @@ button.Close {
   left: 0;
 }
 
-.insertMedia-title {
+.popover-title {
   font-size: 100%;
 }
 
