--- a/applications/dashboard/scss/new-features/_richEditor.scss
+++ b/applications/dashboard/scss/new-features/_richEditor.scss
@@ -340,7 +340,7 @@ $embedded-quote_fg: #A3A3A3 !default;
     }
 }
 
-.insertMedia-title {
+.popover-title {
     margin: 0;
     max-width: calc(100% - #{$richEditor-menuButton_size});
     min-height: #{$richEditor-menuButton_size - $richEditor-insertPopover_paddingVertical};
@@ -393,7 +393,7 @@ $embedded-quote_fg: #A3A3A3 !default;
     left: 0;
 }
 
-.insertMedia-title {
+.popover-title {
     font-size: 100%;
 }
 
