--- a/applications/dashboard/scss/compatibility/_mixins.scss
+++ b/applications/dashboard/scss/compatibility/_mixins.scss
@@ -84,3 +84,10 @@
     -ms-user-select: none;
     user-select: none;
 }
+
+@mixin disabledInput {
+    pointer-events: none;
+    user-select: none;
+    cursor: default;
+    opacity: .5;
+}
