Renamed "new-features" to "new-components" Improved compatibility with older themes

--- a/applications/dashboard/scss/compatibility/_mixins.scss
+++ b/applications/dashboard/scss/compatibility/_mixins.scss
@@ -91,3 +91,11 @@
     cursor: default;
     opacity: .5;
 }
+
+@mixin singleLineEllipsis {
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow-x: hidden;
+    max-width: 100%;
+}
+
