--- a/applications/dashboard/scss/new-components/_authenticateUser.scss
+++ b/applications/dashboard/scss/new-components/_authenticateUser.scss
@@ -1,7 +1,6 @@
-@import "../new-features/icons";
 
 $authenticateUser-column_width: 311px !default;
-$authenticateUser-column_horizontalPadding: 32px !default;
+$authenticateUser-column_horizontalPadding: 26px !default;
 $authenticateUser-userImage_width: 117px !default;
 $authenticateUser-spacer: 18px !default;
 $authenticateUser-socialIcon_width: 42px !default;
@@ -10,6 +9,13 @@ $authenticateUser-socialIcon_bg: #fff !default;
 $fontSize-small: 12px !default;
 $brand-color: #0291db !default;
 $baseUnit: 6px !default;
+$fontSize-large: 16px !default;
+$fontSize-default: 14px !default;
+$fontSize-small: 12px !default;
+$authenticateUserName-opacity: .6 !default;
+$authenticateUserArrowDown-opacity: .6 !default;
+$icon_size: 24px !default;
+$icon-large_size: 42px !default;
 
 // Dev, do not commit
 body.Entry #Content,
@@ -21,19 +27,37 @@ body.Entry #Content,
 // End dev
 
 
-.authenticateUser {
+.authenticateUserCol {
     padding: 0 $authenticateUser-column_horizontalPadding;
     margin: auto;
     width: #{$authenticateUser-column_width + $authenticateUser-column_horizontalPadding * 2};
+    max-width: 100%;
+    box-sizing: border-box;
 
     .pageTitle {
         text-align: center;
         margin-bottom: $authenticateUser-spacer;
     }
+
+    .button.button-fullWidth {
+        margin-bottom: $authenticateUser-spacer;
+    }
+
+    .icon {
+        display: inline-block;
+        width: $icon_size;
+        height: $icon_size;
+        vertical-align: middle;
+    }
+
+    .iconLarge {
+        width: $icon-large_size;
+        height: $icon-large_size;
+    }
 }
 
-.ssoUser-photoCrop,
-.ssoUser-imageWrap {
+.authenticateUser-photoCrop,
+.authenticateUser-imageWrap {
     display: block;
     width: 100%;
     max-width: $authenticateUser-userImage_width;
@@ -41,23 +65,23 @@ body.Entry #Content,
 }
 
 
-.ssoUser-photoCrop {
+.authenticateUser-photoCrop {
     overflow: hidden;
     border-radius: 50%;
 }
 
-.ssoUser-imageWrap {
+.authenticateUser-imageWrap {
     position: relative;
     margin: auto;
 }
 
-.ssoUser-icon {
+.authenticateUser-icon {
     position: absolute;
     bottom: 0;
     right: 0;
     display: block;
-    width: #{$authenticateUser-socialIcon_width + $authenticateUser-socialIcon_borderWidth * 2};
-    height: #{$authenticateUser-socialIcon_width + $authenticateUser-socialIcon_borderWidth * 2};
+    width: $authenticateUser-socialIcon_width;
+    height: $authenticateUser-socialIcon_width;
     background-color: $authenticateUser-socialIcon_bg;
     border: {
         style: solid;
@@ -68,7 +92,7 @@ body.Entry #Content,
 
 }
 
-.ssoUser-photo {
+.authenticateUser-photo {
     display: block;
     max-width: 100%;
     width: 100%;
@@ -76,27 +100,22 @@ body.Entry #Content,
 }
 
 
-.ssoUser-arrowDown {
+.authenticateUser-arrowDown {
     display: block;
-    margin: 0 auto;
+    margin: $authenticateUser-spacer auto;
+    opacity: $authenticateUserArrowDown-opacity;
 }
 
-
-
-.ssoUser-frame {
-    position: relative;
+.authenticateUser-name {
+    font-size: $fontSize-large;
+    font-weight: 600;
     text-align: center;
 }
 
-.ssoUser-name {
-    //font-size: $fontSize-large;
-    //font-weight: $fontWeight-bold;
-    margin-top: $baseUnit;
-}
-
-.ssoUser-userName {
-    //font-size: $fontSize-small;
-    //color: $ssoUser-userName_color;
+.authenticateUser-userName {
+    font-size: $fontSize-small;
+    opacity: $authenticateUserName-opacity;
+    text-align: center;
 }
 
 .rememberMeAndForgot {
@@ -114,4 +133,23 @@ body.Entry #Content,
 .rememberMeAndForgot-rememberMe {
     flex-grow: 1;
     padding-right: $baseUnit;
+}
+
+.authenticateUser-divider {
+    text-align: center;
+}
+
+.authenticateUser-footer {
+    text-align: center;
+}
+
+.authenticateUser-ssoLabel {
+    display: inline;
+    margin-left: $baseUnit * 2;
+}
+
+.button-ssoLabel {
+    margin-left: 12px;
+    font-size: 14px;
+    font-weight: normal;
 }
