--- a/applications/dashboard/scss/style-compat.scss
+++ b/applications/dashboard/scss/style-compat.scss
@@ -8,9 +8,11 @@
 @import "compatibility/categories";
 
 // This should always be added after style.css and not be overridden.
-@import "authenticate/authenticateUser";
-@import "new-features/followButton";
-@import "new-features/vanillaIcon";
-@import "new-features/selectBox";
-@import "new-features/formElements"; // For new pages with form ony
-@import "new-features/checkboxAndRadioButton"; // For new pages with form ony
+@import "new-components/authenticateUser";
+@import "new-components/followButton";
+@import "new-components/vanillaIcon";
+@import "new-components/selectBox";
+@import "new-components/formElements"; // For new pages with form ony
+@import "new-components/checkboxAndRadioButton"; // For new pages with form ony
+@import "new-components/buttons"; // For new pages with form ony
+@import "new-components/passwordStrength"; // For new pages with form ony
